--- a/References.bib
+++ b/References.bib
@@ -1320,17 +1320,6 @@
   year = {1994},
 }
 
-@article{Kristof2008,
-	title = {Segmental mode of neural patterning in {Sipuncula}},
-	volume = {18},
-	issn = {09609822},
-	doi = {10.1016/j.cub.2008.06.066},
-	number = {15},
-	journal = {Current Biology},
-	author = {Kristof, Alen and Wollesen, Tim and Wanninger, Andreas},
-	year = {2008},
-	pages = {1129--1132}
-}
 @article{Holborow1969,
   author = {Holborow, P. L. and Laverack, M. S. and Barber, V. C.},
   doi = {10.1007/BF00338328},
@@ -1617,6 +1606,17 @@
   pages = {65--81},
   volume = {24},
   year = {2000},
+}
+
+@article{Kristof2008,
+	title = {Segmental mode of neural patterning in {Sipuncula}},
+	volume = {18},
+	doi = {10.1016/j.cub.2008.06.066},
+	number = {15},
+	journal = {Current Biology},
+	author = {Kristof, A. and Wollesen, T. and Wanninger, A.},
+	year = {2008},
+	pages = {1129--1132}
 }
 
 @book{Kruse1990Cambrianpalaeontology,
@@ -2643,6 +2643,17 @@
   title = {{Invertebrate neurophylogeny: suggested terms and definitions for a neuroanatomical glossary}},
   volume = {7},
   year = {2010}
+}
+
+@article{Robinson2014,
+	title = {Variations in the gut of craniid (inarticulated) brachiopods},
+	volume = {31},
+	doi = {10.2108/zs130107},
+	number = {8},
+	journal = {Zoological Science},
+	author = {Robinson, J. H.},
+	year = {2014},
+	pages = {542--545}
 }
 
 @article{Robinson2014Themuscles,
