--- a/References.bib
+++ b/References.bib
@@ -444,7 +444,7 @@
 	pages = {449--469}
 }
 
-@article{Carlson1995Phylogeneticrelationships,
+@article{Carlson1995,
   author = {Carlson, S. J.},
   doi = {10.1111/j.1096-0031.1995.tb00084.x},
   journal = {{Cladistics}},
@@ -2930,6 +2930,17 @@
   year = {2005}
 }
 
+@article{Schulze2007,
+	title = {Phylogeny of sipunculan worms: a combined analysis of four gene regions and morphology},
+	volume = {42},
+	doi = {10.1016/j.ympev.2006.06.012},
+	number = {1},
+	journal = {Molecular Phylogenetics and Evolution},
+	author = {Schulze, A. and Cutler, E. B. and Giribet, G.},
+	year = {2007},
+	pages = {171--92}
+}
+
 @article{Schwabe2010,
   author = {Schwabe, E.},
   journal = {Spixiana},
@@ -3678,7 +3689,7 @@
 }
 
 @article{Wanninger2001,
-  author = {Wanninger, A. and Haszprunar, G.},
+  author = {Wanninger, A. and Carlson, G.},
   doi = {10.1046/j.1525-142X.2001.01034.x},
   journal = {Evolution {\&} Development},
   number = {5},
