--- a/References.bib
+++ b/References.bib
@@ -224,7 +224,7 @@
   year = {2005}
 }
 
-@incollection{Bassett2001Functionalmorphology,
+@incollection{Bassett2001,
   author = {Bassett, M. G. and Popov, L. E. and Holmer, L. E.},
   doi = {10.1201/9780203210437.pt3},
   editor = {Brunton, H. and Cocks, R. M. and Long, S. L.},
@@ -235,7 +235,7 @@
   year = {2001},
 }
 
-@article{Bassett2008Earlyontogeny,
+@article{Bassett2008,
   author = {Bassett, M. G. and Popov, L. E. and Egerquist, E.},
   journal = {{Fossils and Strata}},
   title = {{Early ontogeny of some Ordovician--Silurian strophomenate brachiopods: Significance for interpreting evolutionary relationships within early Rhynchonelliformea}},
@@ -244,7 +244,7 @@
   year = {2008},
 }
 
-@article{Bassett2017Earliestontogeny,
+@article{Bassett2017,
   author = {Bassett, M. G. and Popov, L. E.},
   doi = {10.1111/let.12204},
   journal = {{Lethaia}},
@@ -266,7 +266,7 @@
 	pages = {589--604},
 }
 
-@article{Benedetto2009iChaniella,
+@article{Benedetto2009,
   author = {Benedetto, J. L.},
   doi = {10.1007/s12542-009-0023-7},
   journal = {{Pal{\"a}ontologische Zeitschrift}},
@@ -390,7 +390,7 @@
   year = {2000}
 }
 
-@incollection{Butler2012ConstructingCambrian,
+@incollection{Butler2012,
   author = {Butler, A. D. and Streng, M. and Garwood, R. and Lowe, T. and Holmer, L. E.},
   booktitle = {Palaeontological Association Annual Meeting},
   title = {{Constructing Cambrian body-plans: critical evaluation of tommotiid and stem-brachiopod character homologies [Exceptional preservation of \textit{Micrina} setae and 3D MicroCT reconstruction confirm the tommotiid stem-group brachiopod link]}},
@@ -400,7 +400,7 @@
   year = {2012},
 }
 
-@article{Butler2015Exceptionallypreserved,
+@article{Butler2015,
   author = {Butler, A. D. and Streng, M. and Holmer, L. E. and Babcock, L. E.},
   doi = {10.1017/jpa.2016.8},
   journal = {{Journal of Paleontology}},
@@ -474,7 +474,7 @@
 	pages = {159--163}
 }
 
-@article{Chapman1914IVNotes,
+@article{Chapman1914,
   author = {Chapman, F.},
   doi = {10.1111/j.1365-2818.1914.tb01730.x},
   journal = {{Journal of the Royal Microscopical Society}},
@@ -495,7 +495,7 @@
 	pages = {64}
 }
 
-@article{Chen2007Reinterpretationof,
+@article{Chen2007,
   author = {Chen, J.-Y. and Huang, D.-Y. and Chuang, S.-H.},
   doi = {10.1666/0022-3360(2007)81[38:rotlcb]2.0.co;2},
   journal = {{Journal of Paleontology}},
@@ -524,7 +524,7 @@
 	pages = {445--456}
 }
 
-@book{Clarkson2013InvertebratePalaeontology,
+@book{Clarkson2013,
   author = {Clarkson, E. N. K.},
   title = {{Invertebrate Palaeontology and Evolution}},
   pages = {468},
@@ -532,7 +532,7 @@
   year = {2013},
 }
 
-@article{Conklin1902Theembryology,
+@article{Conklin1902,
   author = {Conklin, E. G.},
   doi = {10.1126/science.16.414.901-a},
   journal = {{Science}},
@@ -599,7 +599,7 @@
 	pages = {1255--1258},
 }
 
-@article{Cooper1976LowerCambrian,
+@article{Cooper1976,
   author = {Cooper, G. A.},
   journal = {{Journal of Paleontology}},
   title = {{Lower Cambrian brachiopods from the Rift Valley (Israel and Jordan)}},
@@ -620,7 +620,7 @@
   year = {1983}
 }
 
-@article{Cusack1999Chemicostructural,
+@article{Cusack1999,
   author = {Cusack, M. and Williams, A. and Buckman, J. O.},
   doi = {10.1111/1475-4983.00098},
   journal = {{Palaeontology}},
@@ -661,7 +661,7 @@
 	pages = {847--854}
 }
 
-@article{Dewing2001Hingemodifications,
+@article{Dewing2001,
   author = {Dewing, K.},
   doi = {10.1139/e00-027},
   journal = {{Canadian Journal of Earth Sciences}},
@@ -706,7 +706,7 @@
   year = {1978}
 }
 
-@article{Dzik1980Ontogenyof,
+@article{Dzik1980,
   author = {Dzik, J.},
   doi = {10.1080/11035898009455162},
   journal = {{Geologiska F{\"o}reningen i Stockholm F{\"o}rhandlingar}},
@@ -759,7 +759,7 @@
 	pages = {317--335}
 }
 
-@article{Elliott1939Noteon,
+@article{Elliott1939,
   author = {Elliott, G. F.},
   doi = {10.1016/s0016-7878(39)80005-0},
   journal = {{Proceedings of the Geologists' Association}},
@@ -770,7 +770,7 @@
   year = {1939},
 }
 
-@article{Emig1992Functionaldisposition,
+@article{Emig1992,
   author = {Emig, C. C.},
   doi = {10.1111/j.1502-3931.1992.tb01398.x},
   journal = {{Lethaia}},
@@ -823,7 +823,7 @@
   year = {1977}
 }
 
-@article{Franzen1980Ultrastructureof,
+@article{Franzen1980,
   author = {Franz{\'{e}}n, {\AA}. and Ahlfors, K.},
   journal = {{Journal of Submicroscopic Cytology}},
   title = {{Ultrastructure of spermatids and spermatozoa in \textit{Phoronis}, Phylum Phoronida}},
@@ -865,7 +865,7 @@
   year = {2000}
 }
 
-@article{Freeman1999Changesin,
+@article{Freeman1999,
   author = {Freeman, G. and Lundelius, J. W.},
   doi = {10.1111/j.1502-3931.1999.tb00539.x},
   journal = {{Lethaia}},
@@ -898,7 +898,7 @@
   year = {2008}
 }
 
-@incollection{Fukumoto2003Theacrosome,
+@incollection{Fukumoto2003,
   author = {Fukumoto, M.},
   doi = {10.1201/9780203210437.ch5},
   editor = {Brunton, H. and Cocks, R. M. and Long, S. L.},
@@ -1056,7 +1056,7 @@
   year = {1975}
 }
 
-@article{Gorjansky1985Themorphology,
+@article{Gorjansky1985,
   author = {Gorjansky, V. Y. and Popov, L. E.},
   doi = {10.1111/j.1502-3931.1986.tb00737.x},
   journal = {{Lethaia}},
@@ -1067,7 +1067,7 @@
   year = {1985},
 }
 
-@article{Gorjansky1986Onthe,
+@article{Gorjansky1986,
   author = {Gorjansky, V. Y. and Popov, L. E.},
   doi = {10.1111/j.1502-3931.1986.tb00737.x},
   journal = {{Lethaia}},
@@ -1153,7 +1153,7 @@
   year = {1973}
 }
 
-@article{Hanken1985Thetaxonomy,
+@article{Hanken1985,
   author = {Hanken, N.-M. and Harper, D. A. T.},
   journal = {{Palaeontology}},
   title = {{The taxonomy, shell structure, and palaeoecology of the trimerellid brachiopod \textit{Gasconsia} Northrop}},
@@ -1173,7 +1173,7 @@
   year = {1949}
 }
 
-@article{Harper2017Brachiopodsorigin,
+@article{Harper2017,
   author = {Harper, D. A. T. and Popov, L. E. and Holmer, L. E.},
   doi = {10.1111/pala.12307},
   journal = {{Palaeontology}},
@@ -1225,7 +1225,7 @@
   year = {2005}
 }
 
-@article{Havlicek1982LingulaceaPaterinacea,
+@article{Havlicek1982,
   author = {Havlicek, M.},
   journal = {{Sbornik geolgickych ved, Paleontologie}},
   title = {{Lingulacea, Paterinacea, and Siphonotretacea (Brachiopoda) in the Lower Ordovician sequence of Bohemia}},
@@ -1278,7 +1278,7 @@
 	pages = {36}
 }
 
-@incollection{Herrmann1997Phoronida,
+@incollection{Herrmann1997,
   author = {Herrmann, K.},
   editor = {Harrison, F. W. and Woollacott, R. M.},
   booktitle = {Microscopic Anatomy of Invertebrates, 13: Lophophorates, Entoprocta, and Cycliophora},
@@ -1309,7 +1309,7 @@
 	pages = {48--51}
 }
 
-@article{Hodgson1994Ultrastructureof,
+@article{Hodgson1994,
   author = {Hodgson, A. N. and Reunov, A. A.},
   doi = {10.1080/07924259.1994.9672365},
   journal = {{Invertebrate Reproduction \& Development}},
@@ -1332,7 +1332,7 @@
   year = {1969}
 }
 
-@article{Holmer1989MiddleOrdovician,
+@article{Holmer1989,
   author = {Holmer, L. E.},
   journal = {{Fossils and Strata}},
   title = {{Middle Ordovician phosphatic inarticulate brachiopods from V{\"a}sterg{\"o}tland and Dalarna, Sweden}},
@@ -1342,7 +1342,7 @@
   year = {1989},
 }
 
-@article{Holmer1997EarlyCambrian,
+@article{Holmer1997,
   author = {Holmer, L. E. and Popov, L. E. and Koneva, S. P. and Rong, J.-Y.},
   doi = {10.1017/s0022336000040063},
   journal = {{Journal of Paleontology}},
@@ -1353,7 +1353,7 @@
   year = {1997},
 }
 
-@article{Holmer2006,
+@article{Holmer2006F,
 	title = {First record of canaliform shell structure from the {Lower} {Cambrian} paterinate brachiopod {\textasciitilde}{Askepasma}{\textasciitilde} from {South} {Australia}},
 	volume = {32},
 	doi = {10.1016/j.jep.2011.11.008.An},
@@ -1364,7 +1364,7 @@
 	pages = {1--5}
 }
 
-@article{Holmer2006Aspinose,
+@article{Holmer2006A,
   author = {Holmer, L. E. and Caron, J.-B.},
   doi = {10.1111/j.1463-6395.2006.00241.x},
   journal = {{Acta Zoologica}},
@@ -1374,7 +1374,7 @@
   year = {2006},
 }
 
-@article{Holmer2008TheEarly,
+@article{Holmer2008,
   author = {Holmer, L. E. and Skovsted, C. B. and Brock, G. A. and Valentine, J. L. and Paterson, J. R.},
   doi = {10.1098/rsbl.2008.0277},
   journal = {{Biology Letters}},
@@ -1384,7 +1384,7 @@
   year = {2008},
 }
 
-@article{Holmer2009Theenigmatic,
+@article{Holmer2009,
   author = {Holmer, L. E. and Pettersson Stolk, P. S. and Skovsted, C. B. and Balthasar, U. and Popov, L. E.},
   doi = {10.1111/j.1475-4983.2008.00831.x},
   journal = {{Palaeontology}},
@@ -1406,7 +1406,7 @@
 	pages = {235--239}
 }
 
-@article{Holmer2014OrdovicianSilurian,
+@article{Holmer2014O,
   author = {Holmer, L. E. and Popov, L. E. and Bassett, M. G.},
   doi = {10.1666/13-104},
   journal = {{Journal of Paleontology}},
@@ -1425,7 +1425,7 @@
   year = {2018},
 }
 
-@article{Holmer2018Theattachment,
+@article{Holmer2018T,
   author = {Holmer, L. E. and Zhang, Z.-F. and Topper, T. P. and Popov, L. E. and Claybourn, T. M.},
   doi = {10.1017/jpa.2017.76},
   journal = {{Journal of Paleontology}},
@@ -1445,7 +1445,7 @@
 	pages = {1--236}
 }
 
-@incollection{Hou2017Brachiopoda,
+@incollection{Hou2017,
   author = {Hou, X.-G. and Siveter, D. J. and Siveter, D. J. and Aldridge, R. J. and Cong, P.-Y. and Gabbott, S. E. and Purnell, M. A.},
   doi = {10.1002/9781118896372.ch14},
   booktitle = {The Cambrian Fossils of Chengjiang, China: The Flowering of Early Animal Life},
@@ -1454,7 +1454,7 @@
   year = {2017},
 }
 
-@article{Hu2010Softpart,
+@article{Hu2010,
   author = {Hu, S.-X. and Zhang, Z.-F. and Holmer, L. E. and Skovsted, C. B.},
   doi = {10.4202/app.2009.1106},
   journal = {{Acta Palaeontologica Polonica}},
@@ -1509,7 +1509,7 @@
 	pages = {87--94}
 }
 
-@book{Jamieson1991FishEvolution,
+@book{Jamieson1991,
   author = {Jamieson, B. G. M.},
   title = {{Fish Evolution and Systematics: Evidence from Spermatozoa: With a Survey of Lophophorate, Echinoderm and Protochordate Sperm and an Account of Gamete Cryopreservation}},
   pages = {319},
@@ -1527,7 +1527,7 @@
   year = {1971}
 }
 
-@article{Jin1992Revisionof,
+@article{Jin1992,
   author = {Jin, Y.-G. and Wang, H.-Y.},
   doi = {10.1111/j.1502-3931.1992.tb01790.x},
   journal = {{Lethaia}},
@@ -1597,7 +1597,7 @@
   year = {2010}
 }
 
-@article{Kouchinsky2000Skeletalmicrostructures,
+@article{Kouchinsky2000,
   author = {Kouchinsky, A. V.},
   doi = {10.1080/03115510008619525},
   journal = {{Alcheringa: An Australasian Journal of Palaeontology}},
@@ -1619,7 +1619,7 @@
 	pages = {1129--1132}
 }
 
-@book{Kruse1990Cambrianpalaeontology,
+@book{Kruse1990,
   author = {Kruse, P. D.},
   title = {{Cambrian palaeontology of the Daly Basin}},
   pages = {1--63},
@@ -1627,7 +1627,7 @@
   year = {1990},
 }
 
-@article{Kuzmina2007Structureof,
+@article{Kuzmina2007,
   author = {Kuzmina, T. V. and Malakhov, V. V.},
   doi = {10.1134/s0031030107050073},
   journal = {{Paleontological Journal}},
@@ -1638,7 +1638,7 @@
   year = {2007},
 }
 
-@article{Larsson2014iPaterimitra,
+@article{Larsson2014,
   author = {Larsson, C. M. and Skovsted, C. B. and Brock, G. A. and Balthasar, U. and Topper, T. P. and Holmer, L. E.},
   doi = {10.1111/pala.12072},
   journal = {{Palaeontology}},
@@ -1649,7 +1649,7 @@
   year = {2014},
 }
 
-@article{Laurie1986Phosphaticfauna,
+@article{Laurie1986,
   author = {Laurie, J. R.},
   doi = {10.1080/03115518608619151},
   journal = {{Alcheringa: An Australasian Journal of Palaeontology}},
@@ -1659,7 +1659,7 @@
   year = {1986},
 }
 
-@article{Laurie1987Themusculature,
+@article{Laurie1987,
   author = {Laurie, J.},
   journal = {{Bureau of Mineral Resources Journal of Australian Geology and Geophysics}},
   title = {{The musculature and vascular systems of two species of Cambrian Paterinide (Brachiopoda)}},
@@ -1870,7 +1870,7 @@
   year = {1993}
 }
 
-@article{Madison2017Laminarshell,
+@article{Madison2017,
   author = {Madison, A.},
   doi = {10.3176/earth.2017.17},
   journal = {{Estonian Journal of Earth Sciences}},
@@ -2076,7 +2076,7 @@
   year = {2007}
 }
 
-@article{Moore2018Plywoodlike,
+@article{Moore2018,
   author = {Moore, J. L. and Porter, S. M.},
   doi = {10.1111/pala.12352},
   journal = {{Palaeontology}},
@@ -2097,7 +2097,7 @@
   year = {1959}
 }
 
-@article{Moysiuk2017Hyolithsare,
+@article{Moysiuk2017,
   author = {Moysiuk, J. and Smith, M. R. and Caron, J.-B.},
   doi = {10.1038/nature20804},
   journal = {{Nature}},
@@ -2284,7 +2284,7 @@
   year = {2005}
 }
 
-@article{Owen1969Thecaecum,
+@article{Owen1969,
   author = {Owen, G. and Williams, A.},
   doi = {10.1098/rspb.1969.0019},
   journal = {{Proceedings of the Royal Society B: Biological Sciences}},
@@ -2429,7 +2429,7 @@
   year = {1997}
 }
 
-@incollection{Popov1992TheCambrian,
+@incollection{Popov1992,
   author = {Popov, L. E.},
   editor = {Lipps, J. H. and Signor, P. W.},
   booktitle = {Origin and Early Evolution of Metazoa},
@@ -2450,7 +2450,7 @@
   year = {1997}
 }
 
-@article{Popov2007Earliestontogeny,
+@article{Popov2007,
   author = {Popov, L. E. and Egerquist, E. and Holmer, L. E.},
   doi = {10.1111/j.1502-3931.2006.00008.x},
   journal = {{Lethaia}},
@@ -2461,7 +2461,7 @@
   year = {2007},
 }
 
-@article{Popov2009Earlyontogeny,
+@article{Popov2009,
   author = {Popov, L. E. and Bassett, M. G. and Holmer, L. E. and Ghobadi Pour, G. M.},
   doi = {10.1016/j.gr.2009.01.009},
   journal = {{Gondwana Research}},
@@ -2483,7 +2483,7 @@
   year = {2010},
 }
 
-@article{Popov2015HimalayanCambrian,
+@article{Popov2015,
   author = {Popov, L. E. and Holmer, L. E. and Hughes, N. C. and Ghobadi Pour, G. M. and Myrow, P. M.},
   doi = {10.1002/spp2.1017},
   journal = {{Papers in Palaeontology}},
@@ -2581,7 +2581,7 @@
   year = {1967}
 }
 
-@article{Reunov2004Ultrastructuralstudy,
+@article{Reunov2004,
   author = {Reunov, A. A. and Klepal, W.},
   doi = {10.1007/s10152-003-0153-3},
   journal = {{Helgoland Marine Research}},
@@ -2656,7 +2656,7 @@
 	pages = {542--545}
 }
 
-@article{Robinson2014Themuscles,
+@article{Robinson2014,
   author = {Robinson, J.},
   doi = {10.1080/00222933.2013.840941},
   journal = {{Journal of Natural History}},
@@ -2666,7 +2666,7 @@
   year = {2014},
 }
 
-@article{Robson2001Cambrianand,
+@article{Robson2001,
   author = {Robson, S. P. and Pratt, B. R.},
   doi = {10.1017/s0022336000018060},
   title = {{Cambrian and Ordovician linguliform brachiopods from the Shallow Bay Formation (Cow Head Group), western Newfoundland}},
@@ -2678,13 +2678,17 @@
 }
 
 @article{Rogalla2003,
-	title = {{SHELL} {MICROSTRUCTURE} {OF} {THE} {LATE} {CARBONIFEROUS} {ROSTROCONCH} {MOLLUSC} {APOTOCARDIUM} {LANTERNA} ({BRANSON}, 1965)},
+	title = {Shell microstructure of the {Late} {Carboniferous} rostroconch mollusc \textit{{Apotocardium} lanterna} ({Branson}, 1965)},
 	volume = {77},
+	issn = {0022-3360},
+	url = {http://jpaleontol.geoscienceworld.org/content/77/4/655.full},
+	doi = {10.1666/0022-3360(2003)077<0655:SMOTLC>2.0.CO;2},
 	number = {4},
-	journal = {JOURNAL OF PALEONTOLOGY},
-	author = {Rogalla, N. S. and Carter, J. G. and Pojeta, J.},
+	urldate = {2012-08-31},
+	journal = {Journal of Paleontology},
+	author = {Rogalla, Nicole S. and Carter, Joseph G. and Pojeta, John},
 	year = {2003},
-	pages = {20},
+	pages = {655--673}
 }
 
 @article{RogallaAmler2003,
@@ -2717,17 +2721,6 @@
   year = {1997}
 }
 
-@article{Rouse1997C,
-	title = {Cladistics and polychaetes},
-	volume = {26},
-	doi = {10.1111/j.1463-6409.1997.tb00412.x},
-	number = {2},
-	journal = {Zoologica Scripta},
-	author = {Rouse, G. W. and Fauchald, K.},
-	year = {1997},
-	pages = {139--204}
-}
-
 @article{Rouse1999,
   author = {Rouse, G. W.},
   doi = {10.1111/j.1095-8312.1999.tb01920.x},
@@ -2751,7 +2744,7 @@
   year = {2000}
 }
 
-@article{Rowell1985Theevolutionary,
+@article{Rowell1985,
   author = {Rowell, A. J. and Caruso, N. E.},
   journal = {{Journal of Paleontology}},
   title = {{The evolutionary significance of \textit{Nisusia sulcata}, an early articulate brachiopod}},
@@ -2802,7 +2795,7 @@
   year = {1983}
 }
 
-@book{Ruppert1993Invertebratezoology,
+@book{Ruppert1993,
   author = {Ruppert, E. E. and Barnes, R. D.},
   title = {{Invertebrate zoology (sixth edition)}},
   pages = {1056},
@@ -2821,7 +2814,7 @@
   year = {1995}
 }
 
-@book{Ruppert2004Invertebratezoology,
+@book{Ruppert2004,
   author = {Ruppert, E. E. and Fox, R. S. and Barnes, R. D.},
   title = {{Invertebrate zoology: a functional evolutionary approach}},
   pages = {990},
@@ -3015,7 +3008,7 @@
 	pages = {2413--2419}
 }
 
-@article{Sigwart2015Functional,
+@article{Sigwart2015,
 	title = {Functional morphology in chitons ({Mollusca}, {Polyplacophora}): influences of environment and ocean acidification},
 	volume = {162},
 	doi = {10.1007/s00227-015-2761-2},
@@ -3049,7 +3042,7 @@
 	pages = {405--457}
 }
 
-@article{Skovsted2003EarlyCambrian,
+@article{Skovsted2003,
   author = {Skovsted, C. B. and Holmer, L. E.},
   journal = {{Acta Palaeontologica Polonica}},
   title = {{Early Cambrian (Botomian) stem group brachiopod \textit{Mickwitzia} from Northeast Greenland}},
@@ -3059,7 +3052,7 @@
   year = {2003},
 }
 
-@article{Skovsted2005EarlyCambrian,
+@article{Skovsted2005,
   author = {Skovsted, C. B. and Holmer, L. E.},
   doi = {10.1111/j.1475-4983.2005.00450.x},
   journal = {{Palaeontology}},
@@ -3070,7 +3063,7 @@
   year = {2005},
 }
 
-@article{Skovsted2008Thescleritome,
+@article{Skovsted2008,
   author = {Skovsted, C. B. and Brock, G. A. and Paterson, J. R. and Holmer, L. E. and Budd, G. E.},
   doi = {10.1130/g24385a.1},
   journal = {{Geology}},
@@ -3090,7 +3083,7 @@
 	pages = {1651--1656}
 }
 
-@article{Skovsted2009Thescleritome,
+@article{Skovsted2009,
   author = {Skovsted, C. B. and Holmer, L. E. and Larsson, C. M. and H{\"o}gstr{\"o}m, A. E. S. and Brock, G. A. and Topper, T. P. and Balthasar, U. and Stolk, S. P. and Paterson, J. R.},
   doi = {10.1098/rspb.2008.1655},
   journal = {{Proceedings of the Royal Society B: Biological Sciences}},
@@ -3100,7 +3093,7 @@
   year = {2009},
 }
 
-@article{Skovsted2010EarlyCambrian,
+@article{Skovsted2010,
   author = {Skovsted, C. B. and Peel, J. S.},
   doi = {10.1666/09-123.1},
   journal = {{Journal of Paleontology}},
@@ -3111,7 +3104,7 @@
   year = {2010},
 }
 
-@article{Skovsted2011Scleritomeconstruction,
+@article{Skovsted2011,
   author = {Skovsted, C. B. and Brock, G. A. and Topper, T. P. and Paterson, J. R. and Holmer, L. E.},
   doi = {10.1111/j.1475-4983.2010.01031.x},
   journal = {{Palaeontology}},
@@ -3121,7 +3114,7 @@
   year = {2011},
 }
 
-@article{Skovsted2015Theearly,
+@article{Skovsted2015,
   author = {Skovsted, C. B. and Betts, M. J. and Topper, T. P. and Brock, G. A.},
   journal = {{Memoirs of the Association of Australasian Palaeontologists}},
   title = {{The early Cambrian tommotiid genus \textit{Dailyatia} from South Australia}},
@@ -3142,7 +3135,7 @@
   year = {2016}
 }
 
-@article{Skovsted2017Depthrelated,
+@article{Skovsted2017,
   author = {Skovsted, C. B. and Knight, I. and Balthasar, U. and Boyce, W. D.},
   doi = {10.26879/775},
   journal = {{Palaeontologia Electronica}},
@@ -3231,7 +3224,7 @@
 	pages = {4315--4322}
 }
 
-@article{Sperling2011Molecularpaleobiological,
+@article{Sperling2011,
   author = {Sperling, E. A. and Pisani, D. and Peterson, K. J.},
   doi = {10.1111/j.1525-142X.2011.00480.x},
   journal = {{Evolution \& Development}},
@@ -3287,7 +3280,7 @@
   year = {1978}
 }
 
-@article{Streng2016Anew,
+@article{Streng2016,
   author = {Streng, M. and Butler, A. D. and Peel, J. S. and Garwood, R. J. and Caron, J.-B.},
   doi = {10.1111/pala.12226},
   journal = {{Palaeontology}},
@@ -3319,7 +3312,7 @@
   year = {2012}
 }
 
-@article{Sun2018,
+@article{Sun2018P,
   author = {Sun, H.-J. and Malinky, J. M. and Zhu, M.-Y. and Huang, D.-Y.},
   doi = {10.4202/app.00413.2017},
   journal = {Acta Palaeontologica Polonica},
@@ -3330,7 +3323,7 @@
   year = {2018}
 }
 
-@article{Sun2018Hyolithswith,
+@article{Sun2018H,
   author = {Sun, H.-J. and Smith, M. R. and Zeng, H. and Zhao, F.-C. and Li, G.-X. and Zhu, M.-Y.},
   doi = {10.1098/rspb.2018.1780},
   title = {{Hyoliths with pedicles illuminate the origin of the brachiopod body plan}},
@@ -3352,7 +3345,7 @@
 	pages = {293--318}
 }
 
-@article{Sutton2005Silurianbrachiopods,
+@article{Sutton2005,
   author = {Sutton, M. D. and Briggs, D. E. G. and Siveter, D. J. and Siveter, D. J.},
   doi = {10.1038/nature03846},
   journal = {{Nature}},
@@ -3505,7 +3498,7 @@
 	pages = {199--225}
 }
 
-@article{Ushatinskaya2016Protegulumand,
+@article{Ushatinskaya2016P,
   author = {Ushatinskaya, G. T.},
   doi = {10.1134/s0031030116020088},
   journal = {{Paleontological Journal}},
@@ -3756,7 +3749,7 @@
   year = {2009}
 }
 
-@article{Watkins2002Newrecord,
+@article{Watkins2002,
   author = {Watkins, R.},
   doi = {10.1666/0022-3360(2002)076<0185:nrottb>2.0.co;2},
   journal = {{Journal of Paleontology}},
@@ -3811,7 +3804,7 @@
   year = {2005}
 }
 
-@article{Williams1989Biomineralizationin,
+@article{Williams1989,
   author = {Williams, A.},
   doi = {10.1007/978-1-4899-5740-5_6},
   title = {{Biomineralization in the Lophophorates}},
@@ -3820,7 +3813,7 @@
   year = {1989},
 }
 
-@article{Williams1992Structureof,
+@article{Williams1992,
   author = {Williams, A. and Mackay, S. and Cusack, M.},
   doi = {10.1098/rstb.1992.0086},
   journal = {{Philosophical Transactions of the Royal Society B: Biological Sciences}},
@@ -3830,7 +3823,7 @@
   year = {1992},
 }
 
-@article{Williams1993Roleof,
+@article{Williams1993,
   author = {Williams, A. and Brunton, C. H. C.},
   journal = {{Palaeontology}},
   title = {{Role of shell structure in the classification of the orthotetidine brachiopods}},
@@ -3839,7 +3832,7 @@
   year = {1993},
 }
 
-@article{Williams1994Collagenouschitino,
+@article{Williams1994,
   author = {Williams, A. and Cusack, M. and Mackay, S.},
   doi = {10.1098/rstb.1994.0143},
   journal = {{Philosophical Transactions of the Royal Society B: Biological Sciences}},
@@ -3849,7 +3842,7 @@
   year = {1994},
 }
 
-@article{Williams1996Asupra,
+@article{Williams1996,
   author = {Williams, A. and Carlson, S. J. and Brunton, C. H. C. and Holmer, L. E. and Popov, L. E.},
   doi = {10.1098/rstb.1996.0101},
   journal = {{Philosophical Transactions of the Royal Society B: Biological Sciences}},
@@ -3881,7 +3874,7 @@
   year = {1997},
 }
 
-@article{Williams1998Chemicostructural,
+@article{Williams1998C,
   author = {Williams, A. and Cusack, M. and Buckman, J. O.},
   doi = {10.1098/rstb.1998.0350},
   journal = {{Philosophical Transactions of the Royal Society B: Biological Sciences}},
@@ -3892,7 +3885,7 @@
   year = {1998},
 }
 
-@article{Williams1998Thediversity,
+@article{Williams1998T,
   author = {Williams, A. and Popov, L. E. and Holmer, L. E. and Cusack, M.},
   journal = {{Palaeontology}},
   title = {{The diversity and phylogeny of the paterinate brachiopods}},
@@ -3902,15 +3895,6 @@
 }
 
 @incollection{Williams2000,
-	title = {Part {H}, {Brachiopoda}. {Linguliformea}, {Craniiformea}, and {Rhynchonelliformea}},
-	booktitle = {Treatise on {Invertebrate} {Paleontology}},
-	publisher = {Geological Society of America},
-	author = {Williams, A. and Carlson, S. J. and Brunton, C. H. C. and Holmer, L. E. and Popov, L. E. and Mergl, M. and Laurie, J. R. and Bassett, M. G. and Cocks, L. R. M. and Rong, J.-Y. and Lazarev, S. S. and Grant, R. E. and Racheboeuf, P. R. and Jin, Y.-G. and Wardlaw, B. R. and Harper, D. A. T. and Wright, A. D.},
-	year = {2000},
-	pages = {919}
-}
-
-@incollection{Williams2000LinguliformeaCraniiformea,
   author = {Williams, A. and Carlson, S. J. and Brunton, C. H. C. and Holmer, L. E. and Popov, L. E. and Mergl, M. and Laurie, J. R. and Bassett, M. G. and Cocks, L. R. M. and Rong, J.-Y. and Lazarev, S. S. and Grant, R. E. and Racheboeuf, P. R. and Jin, Y.-G. and Wardlaw, B. R. and Harper, D. A. T. and Wright, A. D.},
   doi = {10.17161/dt.v0i0.5215},
   booktitle = {{Treatise on Invertebrate Paleontology, Part H, Brachiopoda (Revised)}},
@@ -3921,7 +3905,7 @@
   year = {2000},
 }
 
-@article{Williams2002Shellstructure,
+@article{Williams2002,
   author = {Williams, A. and Holmer, L. E.},
   doi = {10.1111/1475-4983.00264},
   journal = {{Palaeontology}},
@@ -3931,7 +3915,7 @@
   year = {2002},
 }
 
-@article{Williams2004Chemicostructure,
+@article{Williams2004,
   author = {Williams, A. and Holmer, L. E. and Cusack, M.},
   doi = {10.1111/j.0031-0239.2004.00404.x},
   journal = {{Palaeontology}},
@@ -3942,7 +3926,7 @@
   year = {2004},
 }
 
-@incollection{Williams2006Rhynchonelliformeapart,
+@incollection{Williams2006,
   author = {Williams, A. and Sandy, M. R. and Carlson, S. J. and Lee, D. E. and Johnson, J. G. and Smirnova, T. N. and Jin, Y.-G. and Hou, H.-F. and Carter, J. L. and Gourvennec, R. and Racheboeuf, P. R. and Brunton, C. H. C. and Dagys, A. S. and Curry, G. B. and Baker, P. G. and Sun, D.-L. and MacKinnon, D. I.},
   doi = {10.17161/dt.v0i0.5581},
   booktitle = {{Treatise on Invertebrate Paleontology, Part H, Brachiopoda (Revised)}},
@@ -3953,7 +3937,7 @@
   year = {2006},
 }
 
-@incollection{Williams2007Supplement,
+@incollection{Williams2007,
   author = {Williams, A. and Racheboeuf, P. R. and Savage, N. M. and Lee, D. E. and Popov, L. E. and Carlson, S. J. and Logan, A. and L{\"{u}}ter, C. and Cusack, M. and Curry, G. B. and Wright, A. D. and Harper, D. A. T. and Cohen, B. L. and Cocks, L. R. M. and MacKinnon, D. I. and Smirnova, T. N. and Baker, P. G. and Carter, J. L. and Gourvennec, R. and Mancenido, M. O. and Brunton, C. H. C. and Dong-Li, D.-S. and Boucot, A. J. and Bassett, M. G. and Alvarez, F. and Holmer, L. E. and Mergl, M. and Emig, C. C. and Rubel, M. and Jia-Yu, J.-R.},
   doi = {10.17161/dt.v0i0.5526},
   booktitle = {{Treatise on Invertebrate Paleontology, Part H, Brachiopoda (Revised)}},
@@ -4016,7 +4000,7 @@
 	pages = {221}
 }
 
-@article{Zhang2004Newdata,
+@article{Zhang2004N,
   author = {Zhang, Z.-F. and Shu, D.-G. and Han, J. and Liu, J.-N.},
   doi = {10.4267/2042/310},
   journal = {{Carnets de g{\'e}ologie (Notebooks on geology)}},
@@ -4026,7 +4010,7 @@
   year = {2004},
 }
 
-@article{Zhang2004Softtissue,
+@article{Zhang2004S,
   author = {Zhang, Z.-F. and Han, J. and Zhang, X.-L. and Liu, J.-N. and Shu, D.-G.},
   journal = {Acta Palaeontologica Polonica},
   title = {{Soft-tissue preservation in the Lower Cambrian linguloid brachiopod from South China}},
@@ -4046,7 +4030,7 @@
   year = {2005}
 }
 
-@article{Zhang2007Agregarious,
+@article{Zhang2007A,
   author = {Zhang, Z.-F. and Shu, D.-G. and Han, J. and Liu, J.-N.},
   doi = {10.1111/j.1502-3931.2006.00002.x},
   journal = {{Lethaia}},
@@ -4057,7 +4041,7 @@
   year = {2007},
 }
 
-@article{Zhang2007Noteon,
+@article{Zhang2007N,
   author = {Zhang, Z.-F. and Han, J. and Zhang, X.-L. and Liu, J.-N. and Guo, J.-F. and Shu, D.-G.},
   doi = {10.1111/j.1463-6395.2007.00252.x},
   journal = {{Acta Zoologica}},
@@ -4068,7 +4052,7 @@
   year = {2007},
 }
 
-@article{Zhang2007Rhynchonelliformeanbrachiopods,
+@article{Zhang2007R,
   author = {Zhang, Z.-F. and Shu, D.-G. and Emig, C. C. and Zhang, X.-L. and Han, J. and Liu, J.-N. and Li, Y. and Guo, J.-F.},
   doi = {10.1111/j.1475-4983.2007.00725.x},
   journal = {{Palaeontology}},
@@ -4078,7 +4062,7 @@
   year = {2007},
 }
 
-@article{Zhang2009Architectureand,
+@article{Zhang2009,
   author = {Zhang, Z.-F. and Li, G.-X. and Emig, C. C. and Han, J. and Holmer, L. E. and Shu, D.-G.},
   doi = {10.1016/j.geobios.2009.04.001},
   journal = {{Geobios}},
@@ -4089,7 +4073,7 @@
   year = {2009},
 }
 
-@article{Zhang2011Anobolellate,
+@article{Zhang2011A,
   author = {Zhang, Z.-F. and Holmer, L. E. and Popov, L. E. and Shu, D.-G.},
   doi = {10.1666/10-121.1},
   journal = {{Journal of Paleontology}},
@@ -4100,7 +4084,7 @@
   year = {2011},
 }
 
-@article{Zhang2011Theexceptionally,
+@article{Zhang2011T,
   author = {Zhang, Z.-F. and Holmer, L. E. and Ou, Q. and Han, J. and Shu, D.-G.},
   doi = {10.1111/j.1502-3931.2011.00261.x},
   journal = {{Lethaia}},
@@ -4133,7 +4117,7 @@
   year = {2013}
 }
 
-@article{Zhang2014Anearly,
+@article{Zhang2014,
   author = {Zhang, Z.-F. and Li, G.-X. and Holmer, L. E. and Brock, G. A. and Balthasar, U. and Skovsted, C. B. and Fu, D.-J. and Zhang, X.-L. and Wang, H.-Z. and Butler, A. D. and Zhang, Z.-L. and Cao, C.-Q. and Han, J. and Liu, J.-N. and Shu, D.-G.},
   doi = {10.1038/srep04682},
   journal = {{Scientific Reports}},
@@ -4153,7 +4137,7 @@
   year = {2015}
 }
 
-@article{Zhang2016Epithelialcell,
+@article{Zhang2016,
   author = {Zhang, Z.-L. and Zhang, Z.-F. and Wang, H.-Z.},
   doi = {10.1080/11035897.2016.1143528},
   journal = {{GFF}},
@@ -4164,7 +4148,7 @@
   year = {2016},
 }
 
-@article{Zhang2018Ahyolithid,
+@article{Zhang2018,
   author = {Zhang, Z.-L. and Skovsted, C. B. and Zhang, Z.-F.},
   doi = {10.1016/j.palaeo.2017.07.021},
   journal = {{Palaeogeography, Palaeoclimatology, Palaeoecology}},
@@ -4202,7 +4186,7 @@
   year = {2017}
 }
 
-@article{Zhuravlev2015Ediacaranskeletal,
+@article{Zhuravlev2015,
   author = {Zhuravlev, A. Y. and Wood, R. A. and Penny, A. M.},
   doi = {10.1098/rspb.2015.1860},
   journal = {{Proceedings of the Royal Society B: Biological Sciences}},
@@ -4233,4 +4217,3 @@
   volume = {9},
   year = {2009}
 }
-
