--- a/15_Characters.Rmd
+++ b/15_Characters.Rmd
@@ -76,7 +76,8 @@ subheadings <- c("Digestive tract: Anus: Presence",
                  "Gametes: Spermatozoa: Nucleus: Shape",
                  "Gametes: Egg: Size",
                  paste("Sclerites:",
-                       c("Bivalved", "Dorsal valve: Growth direction",
+                       c("Posterior valves", "Bivalved: Muscle scars",
+                         "Dorsal valve: Growth direction",
                          "Ventral valve: Growth direction",
                          "Ornament: Concentric ornament",
                          "Composition: Mineralogy",
