--- a/12_TNT.Rmd
+++ b/12_TNT.Rmd
@@ -62,7 +62,7 @@ We acknowledge the Willi Hennig Society for their sponsorship of the TNT softwar
 ```{R tnt-results-init, echo=FALSE}
 tnTrees <- lapply(tntFiles, ReadTntTree, relativePath='.', keepEnd=1)
 tnTrees <- lapply(tnTrees, as.multiPhylo)
-tnTrees <- lapply(tnTrees, function (x) lapply(x, drop.tip, ignored_taxa))
+tnTrees <- lapply(tnTrees, function (x) lapply(x, drop.tip, ignoredTaxa))
 tnConsensi <- lapply(tnTrees, consensus)
 ```
 
