--- a/15_Characters.Rmd
+++ b/15_Characters.Rmd
@@ -76,7 +76,7 @@ subheadings <- c("Digestive tract: Anus: Presence",
                  "Gametes: Spermatozoa: Nucleus: Shape",
                  "Gametes: Egg: Size",
                  paste("Sclerites:",
-                       c("Posterior valves", "Bivalved: Muscle scars",
+                       c("Bivalved", "Bivalved: Muscle scars",
                          "Dorsal valve: Growth direction",
                          "Ventral valve: Growth direction",
                          "Ornament: Concentric ornament",
@@ -133,7 +133,7 @@ for (i in seq_len(n_char)) {
   cat("  \n\n")
   char_notes_i <- char_notes[[i]]
   state_notes_i <- char_notes_i[[2]]
-  state_notes_i <- state_notes_i[!names(state_notes_i) %in% ignored_taxa]
+  state_notes_i <- state_notes_i[!names(state_notes_i) %in% ignoredTaxa]
   if (length(char_notes_i[[1]]) > 0) cat(Italicize(char_notes_i[[1]]), "  \n")
   if (length(state_notes_i) > 0) {
     PrintStateNotes(state_notes_i, taxa_names, taxa_italic, i, Italicize)
