--- a/References.bib
+++ b/References.bib
@@ -328,6 +328,17 @@
   year = {2015}
 }
 
+@article{Branson1942,
+	title = {Correction of homonyms in the lamellibranch genus \textit{{Conocardium}}},
+	volume = {16},
+	doi = {10.2307/1298914},
+	number = {3},
+	journal = {Journal of Paleontology},
+	author = {Branson, C. C.},
+	year = {1942},
+	pages = {387--392}
+}
+
 @article{Brazeau2017Morphylib,
   author = {Brazeau, M. D. and Smith, M. R. and Guillerme, T.},
   doi = {10.5281/zenodo.815371},
@@ -1353,6 +1364,16 @@
   year = {1997},
 }
 
+@article{Holmer2006A,
+  author = {Holmer, L. E. and Caron, J.-B.},
+  doi = {10.1111/j.1463-6395.2006.00241.x},
+  journal = {{Acta Zoologica}},
+  title = {{A spinose stem group brachiopod with pedicle from the Middle Cambrian Burgess Shale}},
+  pages = {273--290},
+  volume = {87},
+  year = {2006},
+}
+
 @article{Holmer2006F,
 	title = {First record of canaliform shell structure from the {Lower} {Cambrian} paterinate brachiopod {\textasciitilde}{Askepasma}{\textasciitilde} from {South} {Australia}},
 	volume = {32},
@@ -1362,16 +1383,6 @@
 	author = {Holmer, L. E. and Skovsted, C. B. and Brock, G. A.},
 	year = {2006},
 	pages = {1--5}
-}
-
-@article{Holmer2006A,
-  author = {Holmer, L. E. and Caron, J.-B.},
-  doi = {10.1111/j.1463-6395.2006.00241.x},
-  journal = {{Acta Zoologica}},
-  title = {{A spinose stem group brachiopod with pedicle from the Middle Cambrian Burgess Shale}},
-  pages = {273--290},
-  volume = {87},
-  year = {2006},
 }
 
 @article{Holmer2008,
@@ -2680,13 +2691,10 @@
 @article{Rogalla2003,
 	title = {Shell microstructure of the {Late} {Carboniferous} rostroconch mollusc \textit{{Apotocardium} lanterna} ({Branson}, 1965)},
 	volume = {77},
-	issn = {0022-3360},
-	url = {http://jpaleontol.geoscienceworld.org/content/77/4/655.full},
 	doi = {10.1666/0022-3360(2003)077<0655:SMOTLC>2.0.CO;2},
 	number = {4},
-	urldate = {2012-08-31},
 	journal = {Journal of Paleontology},
-	author = {Rogalla, Nicole S. and Carter, Joseph G. and Pojeta, John},
+	author = {Rogalla, N. S. and Carter, J. G. and Pojeta, J.},
 	year = {2003},
 	pages = {655--673}
 }
@@ -3312,17 +3320,6 @@
   year = {2012}
 }
 
-@article{Sun2018P,
-  author = {Sun, H.-J. and Malinky, J. M. and Zhu, M.-Y. and Huang, D.-Y.},
-  doi = {10.4202/app.00413.2017},
-  journal = {Acta Palaeontologica Polonica},
-  number = {1},
-  pages = {87--101},
-  title = {{Palaeobiology of orthothecide hyoliths from the Cambrian Manto Formation of Hebei Province, North China}},
-  volume = {63},
-  year = {2018}
-}
-
 @article{Sun2018H,
   author = {Sun, H.-J. and Smith, M. R. and Zeng, H. and Zhao, F.-C. and Li, G.-X. and Zhu, M.-Y.},
   doi = {10.1098/rspb.2018.1780},
@@ -3332,6 +3329,17 @@
   pages = {20181780},
   volume = {285},
   year = {2018},
+}
+
+@article{Sun2018P,
+  author = {Sun, H.-J. and Malinky, J. M. and Zhu, M.-Y. and Huang, D.-Y.},
+  doi = {10.4202/app.00413.2017},
+  journal = {Acta Palaeontologica Polonica},
+  number = {1},
+  pages = {87--101},
+  title = {{Palaeobiology of orthothecide hyoliths from the Cambrian Manto Formation of Hebei Province, North China}},
+  volume = {63},
+  year = {2018}
 }
 
 @article{Sutton2004,
@@ -4217,3 +4225,4 @@
   volume = {9},
   year = {2009}
 }
+
