--- a/12_TNT.Rmd
+++ b/12_TNT.Rmd
@@ -132,12 +132,14 @@ ColMissing(omit)
 
 ```{R tnt-ew-consensus, echo=FALSE, fig.cap="(ref:tnt-ew-cons) (ref:tnt-jacks)"}
 jacks <- GetJacks('./TNT/ew.sym')
-ColPlot(jacks$tree)
-nodeScores <- as.integer(jacks$freq)
-nodelabels(paste0(c('', nodeScores), "\n"),
-           col=c('black', SupportColour(nodeScores / 200L + 0.5, show1=FALSE)),
-           adj=0, pos=2, frame='none', cex=0.75)
-
+if (!is.null(jacks)) {
+  
+  ColPlot(jacks$tree)
+  nodeScores <- as.integer(jacks$freq)
+  nodelabels(paste0(c('', nodeScores), "\n"),
+             col=c('black', SupportColour(nodeScores / 200L + 0.5, show1=FALSE)),
+             adj=0, pos=2, frame='none', cex=0.75)
+}
 #omit <- c("Micrina", "Mickwitzia_muralensis")
 #ColPlot(RootTree(ConsensusWithout(tntEwTrees, omit), rootingTips))
 #ColMissing(omit)
