--- a/References.bib
+++ b/References.bib
@@ -620,6 +620,17 @@
   year = {1976},
 }
 
+@article{Cowden1961,
+	title = {A cytochemical investigation of oögenesis and development to the swimming larval stage in the chiton, \textit{{Chiton} tuberculatum} {L}.},
+	volume = {120},
+	doi = {10.2307/1539533},
+	number = {3},
+	journal = {The Biological Bulletin},
+	author = {Cowden, R. R.},
+	year = {1961},
+	pages = {313--325}
+}
+
 @article{Curry1983,
   author = {Curry, G. B. and Williams, A.},
   doi = {10.1111/j.1502-3931.1983.tb01706.x},
@@ -1140,6 +1151,16 @@
   publisher = {Oxford University Press},
   title = {{Bryozoa (Ectoprocta)}},
   year = {2016}
+}
+
+@misc{Guillerme2018,
+  author       = {Thomas Guillerme and
+                  Martin D. Brazeau and
+                  Martin R. Smith},
+  title        = {{Inapp: Reconstruction of Inapplicable Discrete
+                   Characters on Phylogenetic Trees}},
+  year         = 2018,
+  doi          = {10.5281/zenodo.1484656},
 }
 
 @article{Gustus1972,
@@ -3297,6 +3318,17 @@
   pages = {269--293},
   volume = {59},
   year = {2016},
+}
+
+@article{Stricker1985,
+	title = {The ontogeny of shell secretion in \textit{{Terebratalia} transversa} ({Brachiopoda}, {Articulata}) {I}. {Development} of the mantle},
+	volume = {183},
+	doi = {10.1002/jmor.1051830302},
+	number = {3},
+	journal = {Journal of Morphology},
+	author = {Stricker, S. A. and Reed, C. G.},
+	year = {1985},
+	pages = {233--250}
 }
 
 @article{SumnerRooney2015,
