--- a/References.bib
+++ b/References.bib
@@ -1816,6 +1816,17 @@
 	pages = {454--486}
 }
 
+@article{Lundin1999,
+	title = {Ultrastructure of gill cilia and ciliary rootlets of \textit{{Chaetoderma} nitidulum} {Loven} 1844 ({Mollusca}, {Chaetodermomorpha})},
+	volume = {80},
+	doi = {10.1046/j.1463-6395.1999.00014.x},
+	number = {3},
+	journal = {Acta Zoologica},
+	author = {Lundin, K. and Schander, C.},
+	year = {1999},
+	pages = {185--191}
+}
+
 @article{Lundin2001,
 	title = {Ciliary ultrastructure of neomeniomorphs ({Mollusca}, {Neomeniomorpha} = {Solenogastres})},
 	volume = {120},
