Fun with references

--- a/References.bib
+++ b/References.bib
@@ -1,4 +1,4 @@
-@article{Ackerly1992Rapidshell,
+@article{Ackerly1992,
   author = {Ackerly, S. C.},
   doi = {10.1017/S0025315400059361},
   journal = {{Journal of the Marine Biological Association of the United Kingdom}},
@@ -40,7 +40,7 @@
   year = {2011}
 }
 
-@article{Afzelius1978Finestructure,
+@article{Afzelius1978,
   author = {Afzelius, B. A. and Ferraguti, M.},
   doi = {10.1016/s0022-5320(78)80054-9},
   journal = {{Journal of Ultrastructure Research}},
@@ -85,7 +85,7 @@
 	pages = {277--290}
 }
 
-@article{Balthasar2004Shellstructure,
+@article{Balthasar2004,
   author = {Balthasar, U.},
   doi = {10.1080/00241160410002090},
   journal = {{Lethaia}},
@@ -96,7 +96,7 @@
   year = {2004},
 }
 
-@article{Balthasar2007Anearly,
+@article{Balthasar2007,
   author = {Balthasar, U.},
   doi = {10.1111/j.1475-4983.2007.00729.x},
   journal = {{Palaeontology}},
@@ -107,7 +107,7 @@
   year = {2007},
 }
 
-@article{Balthasar2008iMummpikia,
+@article{Balthasar2008,
   author = {Balthasar, U.},
   doi = {10.1111/j.1475-4983.2008.00754.x},
   journal = {{Palaeontology}},
@@ -118,7 +118,7 @@
   year = {2008},
 }
 
-@article{Balthasar2009EarlyCambrian,
+@article{Balthasar2009E,
   author = {Balthasar, U. and Butterfield, N. J.},
   doi = {10.4202/app.2008.0042},
   journal = {{Acta Palaeontologica Polonica}},
@@ -129,7 +129,7 @@
   year = {2009},
 }
 
-@article{Balthasar2009Homologousskeletal,
+@article{Balthasar2009H,
   author = {Balthasar, U. and Skovsted, C. B. and Holmer, L. E. and Brock, G. A.},
   doi = {10.1130/g30323a.1},
   journal = {{Geology}},
@@ -139,7 +139,7 @@
   year = {2009},
 }
 
-@article{Balthasar2009Thebrachiopod,
+@article{Balthasar2009T,
   author = {Balthasar, U.},
   doi = {10.1007/s12542-009-0026-4},
   journal = {{Pal{\"a}ontologische Zeitschrift}},
@@ -150,7 +150,7 @@
   year = {2009},
 }
 
-@article{Balthasar2011Relicaragonite,
+@article{Balthasar2011,
   author = {Balthasar, U. and Cusack, M. and Faryma, L. and Chung, P. and Holmer, L. E. and Jin, J. and Percival, I. G. and Popov, L. E.},
   doi = {10.1130/g32269.1},
   journal = {{Geology}},
@@ -161,7 +161,7 @@
   year = {2011},
 }
 
-@article{Barczyk1973BraehiopodsTerebratulina,
+@article{Barczyk1973,
   author = {Barczyk, W.},
   title = {{Braehiopods Terebratulina delheidi Vincent in the Nummulite Eocene of the Tatra Mts}},
   number = {3},
