--- a/References.bib
+++ b/References.bib
@@ -3548,6 +3548,16 @@
 	pages = {1101--1112},
 }
 
+@article{Tyler1979,
+	title = {Distinctive features of cilia in metazoans and their significance for systematics},
+	volume = {11},
+	number = {3},
+	journal = {Tissue and Cell},
+	author = {Tyler, S.},
+	year = {1979},
+	pages = {385--400}
+}
+
 @incollection{Tzetlin2005P,
 	address = {Dordrecht, Netherlands},
 	title = {Pharynx and intestine},
