--- a/References.bib
+++ b/References.bib
@@ -1120,6 +1120,17 @@
   year = {2008}
 }
 
+@article{Gruhl2009,
+	title = {Ultrastructure of the body cavities in \textit{{Phylactolaemata}} ({Bryozoa})},
+	volume = {270},
+	doi = {10.1002/jmor.10691},
+	number = {3},
+	journal = {Journal of Morphology},
+	author = {Gruhl, A. and Wegener, I. and Bartolomaeus, T.},
+	year = {2009},
+	pages = {306--318}
+}
+
 @article{Gruhl2010F,
   author = {Gruhl, A.},
   doi = {10.1016/j.jcz.2010.06.001},
@@ -1923,6 +1934,17 @@
   year = {2017},
 }
 
+@article{Maiorova2005,
+	title = {Ultrastructure of tentacles in the sipunculid worm \textit{{Thysanocardia} nigra} {Ikeda}, 1904 ({Sipuncula})},
+	volume = {31},
+	doi = {10.1007/s11179-005-0039-0},
+	number = {1},
+	journal = {Russian Journal of Marine Biology},
+	author = {Maiorova, A. S. and Adrianov, A. V.},
+	year = {2005},
+	pages = {21--27}
+}
+
 @article{Malinky1987,
   author = {Malinky, J. M.},
   doi = {10.1017/S0022336000029310},
@@ -2231,6 +2253,17 @@
   year = {1991}
 }
 
+@article{Nielsen1998,
+	title = {Morphological approaches to phylogeny},
+	volume = {38},
+	doi = {10.1093/icb/38.6.942},
+	number = {6},
+	journal = {American Zoologist},
+	author = {Nielsen, C.},
+	year = {1998},
+	pages = {942--952}
+}
+
 @article{Nielsen2007,
 	title = {Early development of the aplacophoran mollusc \textit{{Chaetoderma}}},
 	volume = {88},
@@ -2346,6 +2379,17 @@
   title = {{Fine structure of the tentacles of \textit{Phoronis australis} Haswell (Phoronida, Lophophorata)}},
   volume = {72},
   year = {1991}
+}
+
+@article{Pardos1991,
+	title = {Fine structure of the tentacles of \textit{{Phoronis} australis} {Haswell} ({Phoronida}, {Lophophorata})},
+	volume = {72},
+	doi = {10.1111/j.1463-6395.1991.tb00320.x},
+	number = {2},
+	journal = {Acta Zoologica},
+	author = {Pardos, F. and Roldán, C. and Benito, J. and Emig, C. C.},
+	year = {1991},
+	pages = {81--90}
 }
 
 @article{Parkinson2005,
@@ -2664,6 +2708,15 @@
   title = {{Observations on development and metamorphosis of \textit{Siphonosoma cumanense} with comparative remarks on \textit{Sipunculus nudus} (Sipuncula, Sipunculidae)}},
   volume = {42},
   year = {1988}
+}
+
+@incollection{Rice1989,
+	title = {Comparative observations of gametes, fertilization, and maturation in sipunculans},
+	booktitle = {Reproduction, {Genetics} and {Distributions} of {Marine} {Organisms}: 23rd {European} {Marine} {Biology} {Symposium}},
+	author = {Rice, M. E.},
+	editor = {Ryland, John S. and Tyler, Paul A.},
+	year = {1989},
+	pages = {167--182}
 }
 
 @incollection{Rice1993,
