--- a/References.bib
+++ b/References.bib
@@ -129,6 +129,19 @@
   year = {2009},
 }
 
+@article{Nielsen2005,
+	title = {Trochophora larvae: cell-lineages, ciliary bands and body regions. 2. {Other} groups and general discussion.},
+	volume = {304},
+	issn = {1552-5007},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/15915468},
+	doi = {10.1002/jez.b.21050},
+	number = {5},
+	urldate = {2012-09-17},
+	journal = {Journal of Experimental Zoology Part B: Molecular and Developmental Evolution},
+	author = {Nielsen, Claus},
+	year = {2005},
+	pages = {401--47}
+}
 @article{Balthasar2009H,
   author = {Balthasar, U. and Skovsted, C. B. and Holmer, L. E. and Brock, G. A.},
   doi = {10.1130/g30323a.1},
@@ -3176,16 +3189,6 @@
 	pages = {1651--1656}
 }
 
-@article{Skovsted2009,
-  author = {Skovsted, C. B. and Holmer, L. E. and Larsson, C. M. and H{\"o}gstr{\"o}m, A. E. S. and Brock, G. A. and Topper, T. P. and Balthasar, U. and Stolk, S. P. and Paterson, J. R.},
-  doi = {10.1098/rspb.2008.1655},
-  journal = {{Proceedings of the Royal Society B: Biological Sciences}},
-  title = {{The scleritome of \textit{Paterimitra}: an Early Cambrian stem group brachiopod from South Australia}},
-  pages = {1651--1656},
-  volume = {276},
-  year = {2009},
-}
-
 @article{Skovsted2010,
   author = {Skovsted, C. B. and Peel, J. S.},
   doi = {10.1666/09-123.1},
@@ -3557,7 +3560,7 @@
 	pages = {6}
 }
 
-@article{Topper2013Reappraisalof,
+@article{Topper2013R,
   author = {Topper, T. P. and Harper, D. A. T. and Ahlberg, P.},
   doi = {10.1080/11035897.2013.811440},
   journal = {{GFF}},
@@ -3568,7 +3571,7 @@
   year = {2013},
 }
 
-@article{Topper2013Theoldest,
+@article{Topper2013T,
   author = {Topper, T. P. and Holmer, L. E. and Skovsted, C. B. and Brock, G. A. and Balthasar, U. and Larsson, C. M. and Petterson Stolk, P. S. and Harper, D. A. T.},
   doi = {10.4202/app.2011.0146},
   journal = {{Acta Palaeontologica Polonica}},
