--- a/References.bib
+++ b/References.bib
@@ -129,19 +129,6 @@
   year = {2009},
 }
 
-@article{Nielsen2005,
-	title = {Trochophora larvae: cell-lineages, ciliary bands and body regions. 2. {Other} groups and general discussion.},
-	volume = {304},
-	issn = {1552-5007},
-	url = {http://www.ncbi.nlm.nih.gov/pubmed/15915468},
-	doi = {10.1002/jez.b.21050},
-	number = {5},
-	urldate = {2012-09-17},
-	journal = {Journal of Experimental Zoology Part B: Molecular and Developmental Evolution},
-	author = {Nielsen, Claus},
-	year = {2005},
-	pages = {401--47}
-}
 @article{Balthasar2009H,
   author = {Balthasar, U. and Skovsted, C. B. and Holmer, L. E. and Brock, G. A.},
   doi = {10.1130/g30323a.1},
@@ -2277,6 +2264,17 @@
 	pages = {942--952}
 }
 
+@article{Nielsen2005,
+	title = {Trochophora larvae: cell-lineages, ciliary bands and body regions. 2. {Other} groups and general discussion.},
+	volume = {304},
+	doi = {10.1002/jez.b.21050},
+	number = {5},
+	journal = {Journal of Experimental Zoology Part B: Molecular and Developmental Evolution},
+	author = {Nielsen, C.},
+	year = {2005},
+	pages = {401--47}
+}
+
 @article{Nielsen2007,
 	title = {Early development of the aplacophoran mollusc \textit{{Chaetoderma}}},
 	volume = {88},
@@ -3486,7 +3484,7 @@
 	pages = {94--97},
 }
 
-@incollection{Temereva2016Phoronida,
+@incollection{Temereva2016P,
   address = {Oxford},
   author = {Temereva, E. N.},
   booktitle = {Structure and Evolution of Invertebrate Nervous Systems},
@@ -3497,7 +3495,7 @@
   year = {2016}
 }
 
-@article{Temereva2016Thenervous,
+@article{Temereva2016T,
   author = {Temereva, E. N. and Kosevich, I. A.},
   doi = {10.1186/s12862-016-0744-7},
   journal = {BMC Evolutionary Biology},
@@ -3508,7 +3506,7 @@
   year = {2016}
 }
 
-@article{Temereva2017Innervationof,
+@article{Temereva2017I,
   author = {Temereva, E. N.},
   doi = {10.1038/s41598-017-14590-8},
   journal = {Scientific Reports},
@@ -3519,7 +3517,7 @@
   year = {2017}
 }
 
-@article{Temereva2017Thefirst,
+@article{Temereva2017T,
   author = {Temereva, E. N. and Kuzmina, T. V.},
   doi = {10.1186/s12862-017-1029-5},
   journal = {BMC Evolutionary Biology},
