--- a/References.bib
+++ b/References.bib
@@ -2927,6 +2927,17 @@
   year = {2004},
 }
 
+@article{Ruthensteiner2010,
+	title = {Anatomy and affinities of \textit{{Micropilina} minuta} {Waren}, 1989 ({Monoplacophora}: {Micropilinidae})},
+	volume = {76},
+	doi = {10.1093/mollus/eyq013},
+	number = {4},
+	journal = {Journal of Molluscan Studies},
+	author = {Ruthensteiner, B. and Schropel, V. and Haszprunar, G.},
+	year = {2010},
+	pages = {323--332}
+}
+
 @incollection{SalviniPlawen1996,
   address = {London},
   author = {{von Salvini-Plawen}, L. and Steiner, G.},
