--- a/References.bib
+++ b/References.bib
@@ -74,6 +74,16 @@
   year = {2013}
 }
 
+@article{Amsellem1976,
+	title = {Distribution of the glio-interstitial system in molluscs: {II}. electron microscopy of tonic and phasic muscles in the digestive tract of aplysia and other opisthobranchs},
+	volume = {165},
+	doi = {10.1007/BF00226657},
+	number = {2},
+	journal = {Cell and Tissue Research},
+	author = {Amsellem, J. and Nicaise, G.},
+	year = {1976}
+}
+
 @article{AuzouxBordenave2010,
 	title = {Ultrastructure, chemistry and mineralogy of the growing shell of the {European} abalone \textit{{Haliotis} tuberculata}},
 	volume = {171},
@@ -1277,6 +1287,17 @@
   year = {1982},
 }
 
+@article{HaySchmidt1989,
+	title = {The nervous system of the actinotroch larva of \textit{{Phoronis} muelleri} ({Phoronida})},
+	volume = {108},
+	doi = {10.1007/BF00312274},
+	number = {6},
+	journal = {Zoomorphology},
+	author = {Hay-Schmidt, A.},
+	year = {1989},
+	pages = {333--351}
+}
+
 @article{HaySchmidt1992,
   author = {Hay-Schmidt, A.},
   doi = {10.1007/BF01632817},
@@ -2337,6 +2358,17 @@
 	year = {2006},
 	pmid = {16805897},
 	pages = {325--330},
+}
+
+@article{OBrien2003,
+	title = {Expression of \textit{{Pax}258} in the gastropod statocyst: insights into the antiquity of metazoan geosensory organs},
+	volume = {5},
+	doi = {10.1046/j.1525-142X.2003.03062.x},
+	number = {6},
+	journal = {Evolution and Development},
+	author = {O'Brien, E. K. and Degnan, B. M.},
+	year = {2003},
+	pages = {572--578}
 }
 
 @article{Okusu2002,
