--- a/References.bib
+++ b/References.bib
@@ -2132,7 +2132,7 @@
 }
 
 @article{Meyer2015,
-	title = {Nervous system development in lecithotrophic larval and juvenile stages of the annelid {\textasciitilde}{Capitella} teleta{\textasciitilde}},
+	title = {Nervous system development in lecithotrophic larval and juvenile stages of the annelid \textit{{Capitella} teleta}},
 	volume = {12},
 	doi = {10.1186/s12983-015-0108-y},
 	journal = {Frontiers in Zoology},
@@ -3883,6 +3883,16 @@
   title = {{Muscle development in \textit{Antalis entalis} (Mollusca, Scaphopoda) and its significance for scaphopod relationships}},
   volume = {254},
   year = {2002}
+}
+
+@article{Wanninger2003,
+	title = {The development of the serotonergic and {FMRF}-amidergic nervous system in \textit{{Antalis} entalis} ({Mollusca}, {Scaphopoda})},
+	volume = {122},
+	doi = {10.1007/s00435-003-0071-6},
+	journal = {Zoomorphology},
+	author = {Wanninger, A. and Haszprunart, G.},
+	year = {2003},
+	pages = {77--85}
 }
 
 @article{Wanninger2005,
