progress to 48 taxa

--- a/References.bib
+++ b/References.bib
@@ -505,6 +505,17 @@
   year = {1914},
 }
 
+@article{Checa2000,
+	title = {A new model for periostracum and shell formation in {Unionidae} ({Bivalvia}, {Mollusca})},
+	volume = {32},
+	doi = {10.1054/tice.2000.0129},
+	number = {5},
+	journal = {Tissue and Cell},
+	author = {Checa, A.},
+	year = {2000},
+	pages = {405--416}
+}
+
 @article{Checa2017,
 	title = {Cuticle of {Polyplacophora}: structure, secretion, and homology with the periostracum of conchiferans},
 	volume = {164},
@@ -3604,15 +3615,14 @@
 @article{Todt2013,
 	title = {Aplacophoran mollusks—still obscure and difficult?},
 	volume = {31},
-	url = {http://www.bioone.org/doi/abs/10.4003/006.031.0110},
 	doi = {10.4003/006.031.0110},
 	number = {1},
-	urldate = {2014-03-17},
 	journal = {American Malacological Bulletin},
-	author = {Todt, Christiane},
+	author = {Todt, C.},
 	year = {2013},
 	pages = {181--187}
 }
+
 @article{Topper2013R,
   author = {Topper, T. P. and Harper, D. A. T. and Ahlberg, P.},
   doi = {10.1080/11035897.2013.811440},
@@ -3851,6 +3861,17 @@
 	pages = {97--110}
 }
 
+@article{Wagner1997,
+	title = {Patterns of morphologic diversification among the {Rostroconchia}},
+	volume = {23},
+	doi = {10.2307/2401160},
+	number = {1},
+	journal = {Paleobiology},
+	author = {Wagner, P. J.},
+	year = {1997},
+	pages = {115--150}
+}
+
 @incollection{Waller1998,
 	address = {Calgary},
 	title = {Origin of the molluscan class {Bivalvia} and a phylogeny of major groups},
@@ -3949,6 +3970,17 @@
   pages = {185--186},
   volume = {76},
   year = {2002},
+}
+
+@article{Weiss2002,
+	title = {Mollusc larval shell formation: amorphous calcium carbonate is a precursor phase for aragonite},
+	volume = {293},
+	doi = {10.1002/jez.90004},
+	number = {5},
+	journal = {Journal of Experimental Zoology},
+	author = {Weiss, I. M. and Tuross, N. and Addadi, L. and Weiner, S.},
+	year = {2002},
+	pages = {478--491}
 }
 
 @article{Wiens1998,
