--- a/References.bib
+++ b/References.bib
@@ -1247,6 +1247,17 @@
   year = {2017},
 }
 
+@article{Haszprunar1988,
+	title = {On the origin and evolution of major gastropod groups, with special reference to the {Streptoneura}},
+	volume = {54},
+	doi = {10.1093/mollus/54.4.367},
+	number = {4},
+	journal = {Journal of Molluscan Studies},
+	author = {Haszprunar, G.},
+	year = {1988},
+	pages = {367--441}
+}
+
 @incollection{Haszprunar1996,
   address = {London},
   author = {Haszprunar, G.},
@@ -1661,6 +1672,17 @@
 	pages = {201--204}
 }
 
+@article{Kocot2011,
+	title = {Phylogenomics reveals deep molluscan relationships},
+	volume = {477},
+	doi = {10.1038/nature10382},
+	number = {7365},
+	journal = {Nature},
+	author = {Kocot, K. M. and Cannon, J. T. and Todt, C. and Citarella, M. R. and Kohn, A. B. and Meyer, A. and Santos, S. R. and Schander, C. and Moroz, L. L. and Lieb, B. and Halanych, K. M.},
+	year = {2011},
+	pages = {452--456}
+}
+
 @article{Kopuchian2010,
   author = {Kopuchian, C. and Ram{\'{i}}rez, M. J.},
   doi = {10.1111/j.1096-0031.2009.00269.x},
@@ -1722,6 +1744,17 @@
   pages = {417--446},
   volume = {57},
   year = {2014},
+}
+
+@article{Lauri2014,
+	title = {Development of the annelid axochord: {Insights} into notochord evolution},
+	volume = {345},
+	doi = {10.1126/science.1253396},
+	number = {6202},
+	journal = {Science},
+	author = {Lauri, A. and Brunet, T. and Handberg-Thorsager, M. and Fischer, A. H. L. and Simakov, O. and Steinmetz, P. R. H. and Tomer, R. and Keller, P. J. and Arendt, D.},
+	year = {2014},
+	pages = {1365--1368}
 }
 
 @article{Laurie1986,
@@ -2132,6 +2165,17 @@
 	pages = {401--406}
 }
 
+@article{Merkel2015,
+	title = {Muscular anatomy of an entoproct creeping-type larva reveals extraordinary high complexity and potential shared characters with mollusks},
+	volume = {15},
+	doi = {10.1186/s12862-015-0394-1},
+	number = {1},
+	journal = {BMC Evolutionary Biology},
+	author = {Merkel, J. and Lieb, B. and Wanninger, A.},
+	year = {2015},
+	pages = {130}
+}
+
 @article{Meyer2010,
 	title = {A comprehensive fate map by intracellular injection of identified blastomeres in the marine polychaete \textit{{Capitella} teleta}},
 	volume = {1},
@@ -2424,6 +2468,17 @@
   year = {1969},
 }
 
+@article{Page2006,
+	title = {Modern insights on gastropod development: reevaluation of the evolution of a novel body plan},
+	volume = {46},
+	doi = {10.1093/icb/icj018},
+	number = {2},
+	journal = {Integrative and Comparative Biology},
+	author = {Page, L. R.},
+	year = {2006},
+	pages = {134--143}
+}
+
 @article{Pardos1991,
   author = {Pardos, F. and Rold{\'{a}}n, C. and Benito, J. and Emig, C. C.},
   doi = {10.1111/j.1463-6395.1991.tb00320.x},
@@ -2556,6 +2611,15 @@
 	author = {Pojeta, J. and Runnegar, B. N. and Morris, N. J. and Newell, N. D.},
 	year = {1972},
 	pages = {264--267}
+}
+
+@article{Pojeta1976,
+	title = {The paleontology of rostroconch mollusks and the early history of the phylum {Mollusca}},
+	volume = {968},
+	journal = {Geological Survey Professional Paper},
+	author = {Pojeta, J. and Runnegar, B. N.},
+	year = {1976},
+	pages = {1--88}
 }
 
 @article{Ponder1997,
@@ -3059,6 +3123,17 @@
 	pages = {2855--2869}
 }
 
+@article{Scherholz2015,
+	title = {From complex to simple: myogenesis in an aplacophoran mollusk reveals key traits in aculiferan evolution},
+	volume = {15},
+	doi = {10.1186/s12862-015-0467-1},
+	number = {1},
+	journal = {BMC Evolutionary Biology},
+	author = {Scherholz, M. and Redl, E. and Wollesen, T. and Todt, C. and Wanninger, A.},
+	year = {2015},
+	pages = {201}
+}
+
 @article{Schopf1967,
   author = {Schopf, T. J. M. and Manheim, F. T.},
   doi = {10.2307/1302092},
@@ -3144,6 +3219,17 @@
   title = {{The functional morphology of scaphopod captacula}},
   volume = {30},
   year = {1988}
+}
+
+@incollection{Shimek1997,
+	address = {New York},
+	title = {Scaphopoda},
+	booktitle = {Microscopic antomy of invertebrates, volume 6: {Mollusca} {II}},
+	publisher = {Wiley-Liss, Inc.},
+	author = {Shimek, R. L. and Steiner, G.},
+	editor = {Harrison, Frederick W and Kohn, Alan J},
+	year = {1997},
+	pages = {719--82}
 }
 
 @article{Shunkina2015,
