--- a/References.bib
+++ b/References.bib
@@ -1281,13 +1281,13 @@
 @article{Haszprunar2000W,
 	title = {Molluscan muscle systems in development and evolution},
 	volume = {38},
-	url = {http://dx.doi.org/10.1046/j.1439-0469.2000.383145.x},
 	number = {3},
 	journal = {Journal of Zoological Systematics and Evolutionary Research},
-	author = {Haszprunar, Gerhard and Wanninger, Andreas},
+	author = {Haszprunar, G. and Wanninger, A.},
 	year = {2000},
 	pages = {157--163}
 }
+
 @article{Haszprunar2008,
   author = {Haszprunar, G. and Wanninger, A.},
   doi = {10.1111/j.1463-6395.2007.00301.x},
